# algorand-contracts-am

./: .gitignore  README.md  TEST_BYPASS.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: config.yml
contracts/identity/: user_identity.py
